fixed dots on mobile details page

--- a/src/styles/modules/detail.less
+++ b/src/styles/modules/detail.less
@@ -141,19 +141,23 @@ section#detail {
 /* Detail Header
    ========================================================================== */
 .detail-header-section {
+    background-position: 0 50%;
+    background-size: 6px;
     color: @white;
     .fira-sans-medium;
     .font-size(1);
     line-height: 12px;
-    margin: 0 0 24px 16px;
+    margin: 0 0 24px 0px;
+    padding-left: 16px;
     text-transform: uppercase;
-    text-indent: -9000px;
-    overflow: hidden;
 
     .at-medium({
         .font-size(1.4);
         line-height: 16px;
-        margin: 0 0 40px 20px;
+        margin: 0 0 40px 0;
+        padding-left: 20px;
+        text-indent: -9000px;
+        overflow: hidden;
     });
 }
 
