--- a/src/styles/modules/experience.less
+++ b/src/styles/modules/experience.less
@@ -13,6 +13,12 @@
 
     .is-detail & {
         z-index: 0;
+
+        display: none;
+
+        .at-medium({
+            display: block;
+        });
     }
 }
 
